--- a/presentation/index.html
+++ b/presentation/index.html
@@ -67,7 +67,7 @@
 	<h2>Tu Workflow determina tu satisfacción o frustración</h2>
 	<h3></h3>
 	<ul>
-		<li>El editor</li>
+		<li>La importancia del editor</li>
 		<li>Power tools ( Librerías, herramientas )</li>
 		<li>Iterar rápido</li>
 	</ul>
@@ -78,7 +78,7 @@
 	<h3>(Con muchas cosas en común)</h3>
 	<ul>
 		<li>Es un proceso creativo </li>			
-		<li>Bloques productivos mas pequeños</li>
+		<li>Bloques productivos más pequeños</li>
 		<li>Nadie puede codificar por 8 horas seguidas</li>			
 		</li>
 		<li>La primera versión por lo general es mala.</li>
@@ -169,7 +169,7 @@
 </section>
 
 <section class="slide">
-	<h1>¿Cuales son los "Bootstrap" mas populares?</h1>
+	<h1>"Bootstrap" populares</h1>
 </section>
 
 <section class="slide">
@@ -317,6 +317,10 @@
 		<li>@hugozap</li>
 		<li>hugozap@obassi.com</li>
 	</ul>
+	
+	<a href="https://github.com/hugozap/barcamp-2012-web">
+	Código fuente de esta presentación: https://github.com/hugozap/barcamp-2012-web
+	</a>
 </section>
 
 
